src/objects/Court_Search_Email_Template__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The email template , to be used, when a email is send via the court search page</description>
    <fields>
        <fullName>Default_CR_Reliability__c</fullName>
        <label>Default CR Reliability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_CR_Status__c</fullName>
        <inlineHelpText>Set default CR Status, separate multiple options using semi colon</inlineHelpText>
        <label>Default CR Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <description>Please enter the developer Name of the email template</description>
        <inlineHelpText>Please enter the developer Name of the email template</inlineHelpText>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Fields_For_Logging__c</fullName>
        <description>These fields should not be logged when the Deposition Logging Trigger runs</description>
        <inlineHelpText>These fields should not be logged when the Deposition Logging Trigger runs</inlineHelpText>
        <label>Exclude Fields For Logging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Videographer_Email_Template_Name__c</fullName>
        <label>Videographer Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Court Search Email Template</label>
</CustomObject>